# RAGPilot

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 202606120001_initial_platform_tables.py  202606180001_add_agent_definitions.py  202606180002_add_user_roles.py  202606180003_add_membership_invitation_fields.py  202606180004_add_membership_invitation_expiration.py  (+33 more)
apps/api/ragpilot_api/: main.py
apps/api/tests/: conftest.py  test_access_policy.py  test_actor_authorization_routes.py  test_admin_resource_filter_routes.py  test_admin_write_authorization_routes.py  test_agent_approval_service.py  test_agent_approval_workflow.py  test_agent_definition_routes.py  test_agent_execution_routes.py  test_agent_execution_service.py  test_agent_execution_validation.py  test_agent_run_routes.py  test_agent_run_service.py  test_agent_runtime_engine_resolution.py  test_agent_runtime_governance_routes.py  test_agent_runtime_governance_service.py  test_api_documentation_contract.py  test_api_key_service.py  test_api_router.py  test_chat_response_builder.py  test_chat_routes.py  test_chat_service.py  test_conversation_intent.py  test_conversation_repository.py  test_data_source_repository.py  test_data_source_service.py  test_database_models.py  test_document_and_workflow_list_routes.py  test_document_service.py  test_elasticsearch_retrieval_runtime.py  test_fusion_calibrator.py  test_health.py  test_local_real_model_gate.py  test_mcp_connector_registry_service.py  test_mcp_connector_routes.py  test_mcp_runtime_client.py  test_model_endpoint_routes.py  test_model_gateway.py  test_model_usage_accounting.py  test_observability_contract.py  (+33 more)
apps/worker/: README.md  pyproject.toml
apps/worker/ragpilot_worker/: config.py  main.py
apps/worker/tests/: test_chunking.py  test_config_security.py  test_connectors.py  test_document_ingestion_activity.py  test_document_ingestion_service.py  test_search_projection.py  test_temporal_payload_contracts.py
(+393 files in other folders)
