[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragpilot-worker"
version = "0.1.0"
description = "Temporal worker for RagPilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "asyncpg>=0.30.0",
  "httpx>=0.28.1",
  "minio>=7.2.12",
  "openpyxl>=3.1.5",
  "pgvector>=0.3.6",
  "pypdf>=5.6.0",
  "python-docx>=1.1.2",
  "temporalio>=1.9.0",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
]

[tool.setuptools.packages.find]
include = ["ragpilot_worker*"]
