[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RAGPilot-worker"
version = "0.1.0"
description = "Temporal worker for RAGPilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "asyncpg>=0.30.0",
  "httpx>=0.28.1",
  "minio>=7.2.12",
  "openpyxl>=3.1.5",
  "pgvector>=0.3.6",
  "pypdf>=5.6.0",
  "PyMuPDF>=1.24.0",
  "pytesseract>=0.3.13",
  "python-docx>=1.1.2",
  "temporalio>=1.9.0",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[dependency-groups]
dev = [
  "pip-audit>=2.9.0,<3.0",
  "pytest>=9.0,<10.0",
]

[tool.setuptools.packages.find]
include = ["ragpilot_worker*"]
